@@ -44,6 +44,7 @@ Stefan Hoesl - Testing
 Trond Hasle Amundsen - Template check_openmanage
 Silvan Hunkirchen - Bugreport
 Petr Maizner - Bugreport
+Steve Finkelstein - Bugreport
 
 ###########################################
 #           NPCD Thanks                   #
